--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <meta name="x5-fullscreen" content="true"><!--QQ强制全屏-->
     <meta name="x5-page-mode" content="app"><!--QQ应用模式-->
     
-    <title>MKOnlinePlayer v2.4</title>
+    <title>婷大宝在线音乐播放器</title>
     <meta name="description" content="一款开源的基于网易云音乐api的在线音乐播放器。具有音乐搜索、播放、下载、歌词同步显示、个人音乐播放列表同步等功能。"/>
-    <meta name="keywords" content="孟坤播放器,在线音乐播放器,MKOnlinePlayer,网易云音乐,音乐api,音乐播放器源代码"/>
+    <meta name="keywords" content="音乐播放器,在线音乐播放器,MKOnlinePlayer,网易云音乐,音乐api,音乐播放器源代码"/>
     
     <!-- 不支持IE8及以下版本浏览器 -->
     <!--[if lte IE 8]>
@@ -47,12 +47,12 @@
 </head>
 <body>
 
-<div id="blur-img"></div>
+<div style="display:none;" id="blur-img"></div>
 
 <!-- 头部logo -->
 <div class="header">
-    <div class="logo" title="Version 2.4; Based on Meting; Powered by Mengkun">
-        ♫ MKOnlinePlayer
+    <div class="logo" title="Based on Meting;">
+        ♫ 婷大宝在线音乐播放器
     </div>
 </div>  <!--class="header"-->
 
